// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 bYXVgZ"
      color="dodoria.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 laZIBT"
      color="dodoria.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cPnVMw"
      color="dodoria.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 gTnYHf"
      color="dodoria.100"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 fKcXYV"
      color="trunks.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 dCHxxz"
      color="trunks.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 jugQgQ"
      color="trunks.100"
    />
    <span
      className="LoaderRing-sc-17wll29-0 eUQiUn"
      color="trunks.100"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 hQVtHO"
      color="#663399"
    />
    <span
      className="LoaderRing-sc-17wll29-0 jhOXnQ"
      color="#663399"
    />
    <span
      className="LoaderRing-sc-17wll29-0 fGjxUH"
      color="#663399"
    />
    <span
      className="LoaderRing-sc-17wll29-0 bzIriE"
      color="#663399"
    />
  </strong>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
  <strong
    className="Container-sc-12rktgh-0 jyJfhm"
    role="progressbar"
  >
    <span
      className="LoaderRing-sc-17wll29-0 ieQBLB"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cOhRov"
    />
    <span
      className="LoaderRing-sc-17wll29-0 kDfQgs"
    />
    <span
      className="LoaderRing-sc-17wll29-0 cxVlqD"
    />
  </strong>
</div>
`;
